--- a/index.html
+++ b/index.html
@@ -1,1 +1,174 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Lever Website</title>
+	
+
+
+<!-- Bootstrap CDN -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- CSS Style Sheet -->
+	<link rel="stylesheet" type="text/css" href="lever.css">
+
+<!-- Lato Font -->
+<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,900" rel="stylesheet">
+
+</head>
+<body>
+<!-- navbar -->
+<nav class="navbar navbar-default" role="navigation">
+
+<!-- The logo that takes back to homepag -->
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+		<a href="#" class="navbar-brand">Lever</a>
+	</div>
+<!-- Content for right side of nav bar -->
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	<ul class="nav navbar-nav">
+		<li><a href="#about_anchor">Who we are</a></li>
+		<li><a href="#team_anchor">Team</a></li>
+		<li><a href="#work_anchor">Our Work</a></li>
+		<li><a href="#contact_anchor">Contact</a></li>
+
+	</ul>
+</div>	
+<!-- Content on right side of navbar -->
+	<ul class="nav navbar-nav navbar-right"></ul>
+</nav>
+
+
+<!-- Jumbotron -->
+
+<div class="jumbotron">
+<div class="container">
+  <h1>Lever Lab</h1>
+  <p>Exploring the science of swallowing</p>
+  <p><a id="btn_learn"class="btn btn-primary btn-lg" href="#about_anchor" role="button">Who are we</a></p>
+</div>
+</div>
+
+<!-- What we do division  -->
+<div id="about">
+	<a name="about_anchor"></a>
+	<h2 class="headings"> Who are we?</h2>
+		
+	<p class="pageText"> The Lever Lab is a research lab located at the University of Missouri.  We work with animals to better understand swallowing impairment, also known as dysphagia. Dysphagia can be caused by a variety of disorders including Alzheimer&#39;s disease, Huntington&#39;s disease, Parkinson&#39;s disease, muscular dystrophy, spinal muscular atrophy, amyotrophic lateral sclerosis (ALS), Down syndrome, and fragile-X syndrome. Funded by the National Institutes of Health, we investigate animals with these conditions to determine whether they develop characteristics of human dysphagia, with the ultimate goal of finding new treatments to improve swallowing function for humans and companion animals.
+	</p>
+	
+
+</div>
+
+<!-- Team information -->
+<a name="team_anchor"></a>
+<div id="team">
+<div class="container">
+	<div class="row">
+		<!-- <div class= "col-lg-2"><img src="ash_sampath.jpeg" alt="..." class="img-circle img-responsive"></div> -->
+		<div class= "col-sm-12 col-md-6 col-lg-2"><h2 class="headings headings2">The Team</h2></div>
+		<div class= "col-sm-12 col-md-6 col-lg-2">
+			<img src="images/Lever_pic.jpg" alt="..." class="img-circle img-responsive">
+			<p class="team_text">Teresa E. Lever, PhD</p>
+		
+			<p class="team_text">Principal Investigator</p>
+		</div>
+		<div class= "col-sm-12 col-md-6 col-lg-2">
+			<img src="images/ash_sampath.jpeg" alt="..." class="img-circle img-responsive">
+			<p class="team_text">Ash Sampath</p>
+			
+			<p class="team_text">Medical Student</p>
+		</div>
+		<div class= "col-sm-12 col-md-6 col-lg-2">
+			<img src="images/Lexie_ruffolo.jpg" alt="..." class="img-circle img-responsive">
+			<p class="team_text">Lexie Ruffolo</p>
+			<p class="team_text">Medical Student</p>
+		</div>
+		<div class= "col-sm-12 col-md-6 col-lg-2"><img src="images/Mitchell_allen.jpg" alt="..." class="img-circle img-responsive">
+			<p class="team_text">Mitchell Allen</p>
+			<p class="team_text">Medical Student</p>
+		</div>
+	
+	</div>
+	
+
+</div>
+</div>
+
+<!-- Awards, Articles, Patents -->
+<a name="work_anchor"></a>
+<div class="awards-section">
+<h2 class="headings"> Our Work</h2>
+	<p class="headings ulist" id="subheader">Patents</p>
+	<ul class="pageText ulist">
+		<li>US 9,107,385 B2 &#45; Animal kennel for scientific examination &#45; Issued 8/18/2016</li>
+		<li>US 2016/0081591 A1 &#45; System and Method for Laryngeal Reflex Examination &#45; Published 3/24/2016</li>
+		<li>US Provisional App. 62/481,946 &#45; Detecting and Monitoring Bulbar Dysfunction &#45; Filed 4/5/2016</li>
+	</ul>
+	<p class="headings ulist" id="subheader">Awards</p>
+	<ul class="pageText ulist">
+		<li>2017: MU Top Faculty Achievers Award for receiving prestigious grants within the past year</li>
+		<li>2016: Excellence in Research Mentoring of Trainees Award, University of Missouri School of Medicine</li>
+		<li>2013: Nominated for the President&#39;s Award for Early Career Excellence</li>
+	</ul>
+	<p class="headings ulist" id="subheader">Publications</p>
+		<p class="pageText ulist">We are publishing non-stop. To see our most current publications view us on <a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=Teresa+Lever+University+of+Missouri"> PubMed!</a></p>
+	<hr>
+</div>
+<!-- Contact Us -->
+<a name="contact_anchor"></a>
+<div class="contact-section">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-2 col-md-2 col-lg-3">
+				<div id="contact-background">
+				<h2 class="headings">Want to say hello?</h2>
+				<p class="pageText">Veterinary Science Bldg, Columbia, MO 65201</p>	
+				<h2 class="headings">Want to chat?</h2>
+				<p class="pageText"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> (573) 882-8174</p>
+				</div>
+
+			</div>
+			<div class="col-sm-10 col-md-10 col-lg-9">
+			<div id="map"></div>
+			</div>
+		</div>
+	</div>
+</div>
+
+    <script>
+      function initMap() {
+        var uluru = {lat: 38.942338, lng: -92.317659};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDA3eRLcj3ZBoHO_Z5ujKKnnFA6CblqRW8&callback=initMap">
+    </script>
+
+  
+
+<!-- JQuery must be ahead of JavaScript -->
+<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+
+<!-- JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+</body>
+</html>
